compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case15.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 614
expression: "case 2.22, 1, \"three\" { x, _, y if x <. y -> 1 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:41
  │
1 │ case 2.22, 1, "three" { x, _, y if x <. y -> 1 }
  │                                         ^

Expected type:

    Float

Found type:

    String


